force-app/main/default/objects/aecm__Program_Stakeholder__c/aecm__Program_Stakeholder__c.object-meta.xml
<CustomObject>
    <description>Used to establish a many to many relationship between Programs and a Stakeholder.</description>
    <label>Program Stakeholder</label>
    <nameField>
        <displayFormat>PS-{MM}{YY}{000000}</displayFormat>
        <label>Program Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>