force-app/main/default/objects/aecm__Program_Stakeholder__c/fields/aecm__Email__c.field-meta.xml
<CustomField>
    <fullName>aecm__Email__c</fullName>
    <formula>IF( aecm__Stakeholder__r.RecordType.Name == &apos;Internal Stakeholder&apos;,  aecm__Stakeholder__r.aecm__Email_Internal__c ,  aecm__Stakeholder__r.aecm__Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email from Tempest stakeholder record.</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>