force-app/main/default/objects/aecm__Program_Stakeholder__c/fields/aecm__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Relationship_Type__c</fullName>
    <inlineHelpText>Select this stakeholder&apos;s relationship to this program.</inlineHelpText>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Executive Chair</fullName>
            </value>
            <value>
                <fullName>Program Owner</fullName>
            </value>
            <value>
                <fullName>Program Lead</fullName>
            </value>
            <value>
                <fullName>Program Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>