force-app/main/default/objects/aecm__Program_Stakeholder__c/fields/aecm__Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stakeholder__c</fullName>
    <label>Stakeholder</label>
    <referenceTo>aecm__Stakeholder__c</referenceTo>
    <relationshipLabel>Program Stakeholders</relationshipLabel>
    <relationshipName>Program_Stakeholders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>