force-app/main/default/objects/aecm__Program_Stakeholder__c/fields/aecm__Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stakeholder_Name__c</fullName>
    <formula>aecm__Stakeholder__r.aecm__Stakeholder_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stakeholder Name</label>
    <type>Text</type>
</CustomField>